props/specimens/ducktape/2026-05-20-00/code/cluster/k8s/ollama/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
  labels:
    app: ollama
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ollama
  ports:
    - name: http
      port: 11434
      targetPort: ollama
      protocol: TCP
    - name: auth-proxy
      port: 11435
      targetPort: auth-proxy
      protocol: TCP
