props/specimens/ducktape/2026-05-20-00/code/cluster/k8s/ollama/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
  namespace: ollama
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: gateway-system
  hostnames:
    - "ollama.allegedly.works"
  rules:
    - timeouts:
        request: "600s"
        backendRequest: "600s"
      backendRefs:
        - name: ollama
          port: 11435
